fix review errors

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -150,7 +150,7 @@
                     </div>
                 </a>
 
-                <a href="{{ dashboardHelper.getSwiterEditor() }}" class="menu-card-link">
+                <a href="{{ dashboardHelper.getSwitcherEditor() }}" class="menu-card-link">
 
                     <div class="menu-card">
                         <div class="card-top">
